
2021-04-08  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c (display_alnum_dump): only consider isprint to decide
	  for necessary hex output
	* common.c (cob_dump_module): set C locale to original one before dump
	  and restore previous one afterwards
	* common.c (cob_sys_printable): set C locale to original one before
	  checking and restore previous one afterwards

2021-01-28  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (lineseq_read), common.c, coblocal.h:
	  backport of COB_LS_SPLIT from 4.x

2021-01-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sys_getopt_long_long): fix for EBCDIC

2021-01-21  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_sig_handler): skip module dump for SIGHUP and SIGPIPE
	* common.c (cob_stack_trace_internal): dump starting program and
	  parameters if in "verbose" mode (which is the default)

2021-01-08  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_backtrace), common.h: new variant of cob_stacktrace
	  with format similar to GDB's backtrace

2021-01-07  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_version): msgid change moving URLs to parameter
	  per gettext-guidelines
	* common.h: version defines to 3.2.0

2020-12-18  Simon Sobisch <simonsobisch@gnu.org>

	FR #397: add support for JSON GENERATE anonymous JSON objects
	* mlio.c (generate_json_from_tree): handle OMITTED NAME attribute

2020-12-08  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (libcob_la_LDFLAGS): updated version-info

2020-12-07  Simon Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_dump_field): complete rewrite to allow any size of OCCURS
	  to be checked for "same as" and to allow that also with nested OCCURS

2020-12-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.h, fileio.c, intrinsic.c: removed unused include sys/timeb.h and
	  definitions for timeb and ftime
	* termio.c (setup_lvlwrk_and_dump_null_adrs): handle level 0 as INDEX

2020-12-02  Simon Sobisch <simonsobisch@gnu.org>
