@@ -1,4 +1,4 @@
-## Copyright (C) 2014-2018 Free Software Foundation, Inc.
+## Copyright (C) 2014-2018, 2021 Free Software Foundation, Inc.
 ## Written by Edward Hart, Simon Sobisch
 ##
 ## This file is part of GnuCOBOL.
@@ -16,7 +16,7 @@
 ## You should have received a copy of the GNU General Public License
 ## along with GnuCOBOL.  If not, see <https://www.gnu.org/licenses/>.
 
-AT_COPYRIGHT([Test cases Copyright (C) 2018 Free Software Foundation, Inc.
+AT_COPYRIGHT([Test cases Copyright (C) 2021 Free Software Foundation, Inc.
 
 Written by Edward Hart, Simon Sobisch])
 
